--- a/EpicSchoolHomework/Views/PhotoItem/PhotoItemList/PhotoItemCollectionViewCell.xib
+++ b/EpicSchoolHomework/Views/PhotoItem/PhotoItemList/PhotoItemCollectionViewCell.xib
@@ -47,10 +47,10 @@
                         <rect key="frame" x="131.5" y="131.5" width="37" height="37"/>
                     </activityIndicatorView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Hrs-E9-wi7" userLabel="Info">
-                        <rect key="frame" x="243" y="220" width="47" height="70"/>
+                        <rect key="frame" x="248" y="220" width="42" height="70"/>
                         <subviews>
-                            <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="xrk-lp-5SY" userLabel="likes">
-                                <rect key="frame" x="0.0" y="0.0" width="47" height="20"/>
+                            <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xrk-lp-5SY" userLabel="likes">
+                                <rect key="frame" x="0.0" y="0.0" width="42" height="20"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="100" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mG5-Wz-nSv" userLabel="count">
                                         <rect key="frame" x="0.0" y="0.0" width="25.5" height="20"/>
@@ -59,14 +59,14 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="y45-R8-oS6">
-                                        <rect key="frame" x="30.5" y="1.5" width="16.5" height="17"/>
+                                        <rect key="frame" x="25.5" y="1.5" width="16.5" height="17"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <imageReference key="image" image="hand.thumbsup" catalog="system" symbolScale="small" renderingMode="template"/>
                                     </imageView>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="dJm-MB-Mkg" userLabel="comments">
-                                <rect key="frame" x="0.0" y="25" width="47" height="20"/>
+                            <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dJm-MB-Mkg" userLabel="comments">
+                                <rect key="frame" x="0.0" y="25" width="42" height="20"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="100" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E0F-hm-0Nz" userLabel="count">
                                         <rect key="frame" x="0.0" y="0.0" width="24.5" height="20"/>
@@ -75,14 +75,14 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IhP-K7-vii">
-                                        <rect key="frame" x="29.5" y="2.5" width="17.5" height="16"/>
+                                        <rect key="frame" x="24.5" y="2.5" width="17.5" height="16"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <imageReference key="image" image="bubble.left" catalog="system" symbolScale="small" renderingMode="template"/>
                                     </imageView>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="t5v-re-u2y" userLabel="visits">
-                                <rect key="frame" x="0.0" y="50" width="47" height="20"/>
+                            <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t5v-re-u2y" userLabel="visits">
+                                <rect key="frame" x="0.0" y="50" width="42" height="20"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Xh-Tq-wg9" userLabel="count">
                                         <rect key="frame" x="0.0" y="0.0" width="21" height="20"/>
@@ -92,7 +92,7 @@
                                         <color key="shadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ygQ-f7-pN6">
-                                        <rect key="frame" x="26" y="3" width="21" height="13.5"/>
+                                        <rect key="frame" x="21" y="3" width="21" height="13.5"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <imageReference key="image" image="eye" catalog="system" symbolScale="small" renderingMode="template"/>
                                     </imageView>
