--- a/EpicSchoolHomework/Views/LocalPhoto/EditLocalPhoto/EditLocalPhotoViewController.xib
+++ b/EpicSchoolHomework/Views/LocalPhoto/EditLocalPhoto/EditLocalPhotoViewController.xib
@@ -11,13 +11,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EditLocalPhotoViewController" customModule="EpicSchoolHomework" customModuleProvider="target">
             <connections>
+                <outlet property="answerDescriptionTextView" destination="Yki-o9-QXe" id="tqy-MY-Ww3"/>
                 <outlet property="answerTextField" destination="WlQ-JF-7sn" id="Ctx-ij-pDf"/>
                 <outlet property="centerMapImageView" destination="xHV-ic-EPd" id="m34-dS-8IQ"/>
+                <outlet property="descriptionStackView" destination="5ua-R9-X7I" id="P2a-3r-9U3"/>
                 <outlet property="descriptionTextField" destination="rN5-np-eol" id="PCM-h0-Q35"/>
                 <outlet property="mapModeControl" destination="wjj-0z-60W" id="pXA-fo-XAM"/>
                 <outlet property="mapView" destination="pwa-zc-IE8" id="Vz1-pn-ZZf"/>
                 <outlet property="photoItemImageView" destination="jUq-n2-y4v" id="kNJ-2g-AGp"/>
-                <outlet property="photoStackView" destination="8G0-Z7-ibJ" id="h5S-PF-hg9"/>
                 <outlet property="questionTextField" destination="wZT-dI-dx6" id="54J-tY-fFG"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="viewMode" destination="5W1-Fd-mso" id="R7b-sd-Abz"/>
@@ -28,33 +29,47 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="8G0-Z7-ibJ" userLabel="photo">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="601"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jUq-n2-y4v">
+                    <rect key="frame" x="0.0" y="106" width="375" height="454"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </imageView>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="5ua-R9-X7I">
+                    <rect key="frame" x="20" y="208" width="335" height="251"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jUq-n2-y4v">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="454"/>
-                        </imageView>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="5ua-R9-X7I">
-                            <rect key="frame" x="0.0" y="479" width="375" height="122"/>
-                            <subviews>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Описание" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rN5-np-eol">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="34"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                </textField>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Загадка" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wZT-dI-dx6">
-                                    <rect key="frame" x="0.0" y="44" width="375" height="34"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                </textField>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Отгадка" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WlQ-JF-7sn">
-                                    <rect key="frame" x="0.0" y="88" width="375" height="34"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                </textField>
-                            </subviews>
-                        </stackView>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Название" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rN5-np-eol">
+                            <rect key="frame" x="10" y="0.0" width="315" height="34"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Загадка" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wZT-dI-dx6">
+                            <rect key="frame" x="10" y="41" width="315" height="34"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Отгадка" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WlQ-JF-7sn">
+                            <rect key="frame" x="10" y="82" width="315" height="34"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Пояснения к отгадке" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Yki-o9-QXe">
+                            <rect key="frame" x="10" y="123" width="315" height="128"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                        </textView>
                     </subviews>
+                    <constraints>
+                        <constraint firstItem="rN5-np-eol" firstAttribute="leading" secondItem="5ua-R9-X7I" secondAttribute="leading" constant="10" id="60C-3E-8mP"/>
+                        <constraint firstAttribute="trailing" secondItem="rN5-np-eol" secondAttribute="trailing" constant="10" id="GYH-HQ-Gme"/>
+                        <constraint firstAttribute="trailing" secondItem="WlQ-JF-7sn" secondAttribute="trailing" constant="10" id="LC5-cA-tZY"/>
+                        <constraint firstItem="WlQ-JF-7sn" firstAttribute="leading" secondItem="5ua-R9-X7I" secondAttribute="leading" constant="10" id="RZE-KT-Ul0"/>
+                        <constraint firstItem="Yki-o9-QXe" firstAttribute="leading" secondItem="5ua-R9-X7I" secondAttribute="leading" constant="10" id="Vbc-tp-Od5"/>
+                        <constraint firstAttribute="trailing" secondItem="wZT-dI-dx6" secondAttribute="trailing" constant="10" id="aUc-3K-NeA"/>
+                        <constraint firstItem="wZT-dI-dx6" firstAttribute="leading" secondItem="5ua-R9-X7I" secondAttribute="leading" constant="10" id="bN6-i6-KwF"/>
+                        <constraint firstAttribute="trailing" secondItem="Yki-o9-QXe" secondAttribute="trailing" constant="10" id="z9N-vX-tgf"/>
+                    </constraints>
                 </stackView>
                 <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="pwa-zc-IE8">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -69,7 +84,7 @@
                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small" weight="light"/>
                 </imageView>
                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="wjj-0z-60W">
-                    <rect key="frame" x="118" y="10" width="139" height="32"/>
+                    <rect key="frame" x="118" y="20" width="139" height="32"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <segments>
                         <segment title="Карта"/>
@@ -80,11 +95,12 @@
                     </connections>
                 </segmentedControl>
                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="5W1-Fd-mso">
-                    <rect key="frame" x="128" y="621" width="119" height="27"/>
+                    <rect key="frame" x="62" y="616" width="251" height="32"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <segments>
                         <segment title="Фото"/>
                         <segment title="Место"/>
+                        <segment title="Описание"/>
                     </segments>
                     <connections>
                         <action selector="viewModeChanged:" destination="-1" eventType="valueChanged" id="lvX-hg-W42"/>
@@ -92,22 +108,21 @@
                 </segmentedControl>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="8G0-Z7-ibJ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="218-q0-R0b"/>
+                <constraint firstItem="5ua-R9-X7I" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="61p-AC-tCb"/>
                 <constraint firstItem="pwa-zc-IE8" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="78B-C1-2o4"/>
                 <constraint firstItem="5W1-Fd-mso" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="DIL-3L-ag0"/>
                 <constraint firstItem="xHV-ic-EPd" firstAttribute="centerX" secondItem="pwa-zc-IE8" secondAttribute="centerX" id="E7k-Lc-jxJ"/>
-                <constraint firstItem="wjj-0z-60W" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="JsT-jR-vLp"/>
-                <constraint firstItem="5W1-Fd-mso" firstAttribute="top" secondItem="8G0-Z7-ibJ" secondAttribute="bottom" constant="20" id="LPi-lS-cef"/>
+                <constraint firstItem="wjj-0z-60W" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="JsT-jR-vLp"/>
+                <constraint firstItem="5ua-R9-X7I" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="NUp-c6-q3O"/>
                 <constraint firstItem="wjj-0z-60W" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Nkz-4g-cL2"/>
                 <constraint firstItem="pwa-zc-IE8" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Opf-MM-Qng"/>
                 <constraint firstItem="pwa-zc-IE8" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="RqR-Bf-jKz"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="5W1-Fd-mso" secondAttribute="bottom" constant="20" id="irS-0r-6F3"/>
-                <constraint firstItem="8G0-Z7-ibJ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="jFQ-1C-9Mn"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="5ua-R9-X7I" secondAttribute="trailing" constant="20" id="Zcf-k2-sVX"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="5W1-Fd-mso" secondAttribute="bottom" constant="20" id="cLd-uk-tZm"/>
+                <constraint firstItem="5ua-R9-X7I" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="jng-OU-dxb"/>
                 <constraint firstItem="xHV-ic-EPd" firstAttribute="centerY" secondItem="pwa-zc-IE8" secondAttribute="centerY" id="vh7-t4-csd"/>
                 <constraint firstItem="pwa-zc-IE8" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="wNx-6G-xnO"/>
-                <constraint firstItem="8G0-Z7-ibJ" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="yio-oV-Tu6"/>
             </constraints>
             <point key="canvasLocation" x="136.80000000000001" y="152.47376311844079"/>
         </view>
