--- a/EpicSchoolHomework/Views/LocalPhoto/EditLocalPhoto/EditLocalPhotoViewController.xib
+++ b/EpicSchoolHomework/Views/LocalPhoto/EditLocalPhoto/EditLocalPhotoViewController.xib
@@ -19,7 +19,7 @@
                 <outlet property="mapModeControl" destination="wjj-0z-60W" id="pXA-fo-XAM"/>
                 <outlet property="mapView" destination="pwa-zc-IE8" id="Vz1-pn-ZZf"/>
                 <outlet property="photoItemImageView" destination="jUq-n2-y4v" id="kNJ-2g-AGp"/>
-                <outlet property="questionTextField" destination="wZT-dI-dx6" id="54J-tY-fFG"/>
+                <outlet property="questionTextView" destination="WXQ-eN-qf8" id="bM7-Nl-JDz"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="viewMode" destination="5W1-Fd-mso" id="R7b-sd-Abz"/>
             </connections>
@@ -35,34 +35,53 @@
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="5ua-R9-X7I">
-                    <rect key="frame" x="20" y="134" width="335" height="199"/>
+                    <rect key="frame" x="20" y="105" width="335" height="257"/>
                     <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Название фото:" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EVh-MW-pWq">
+                            <rect key="frame" x="10" y="0.0" width="315" height="14.5"/>
+                            <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                            <color key="textColor" systemColor="secondaryLabelColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Название" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rN5-np-eol">
-                            <rect key="frame" x="10" y="0.0" width="315" height="34"/>
+                            <rect key="frame" x="10" y="21.5" width="315" height="34"/>
                             <color key="backgroundColor" systemColor="systemGray6Color"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Загадка" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wZT-dI-dx6">
-                            <rect key="frame" x="10" y="41" width="315" height="34"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Загадка:" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l2N-T7-DYb">
+                            <rect key="frame" x="10" y="62.5" width="315" height="14.5"/>
+                            <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                            <color key="textColor" systemColor="secondaryLabelColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="WXQ-eN-qf8" userLabel="Загадка">
+                            <rect key="frame" x="10" y="84" width="315" height="33"/>
                             <color key="backgroundColor" systemColor="systemGray6Color"/>
+                            <color key="textColor" systemColor="labelColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
-                        </textField>
+                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                        </textView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Отгадка:" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aht-HI-t6S">
+                            <rect key="frame" x="10" y="124" width="315" height="14.5"/>
+                            <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                            <color key="textColor" systemColor="secondaryLabelColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Отгадка" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WlQ-JF-7sn">
-                            <rect key="frame" x="10" y="82" width="315" height="34"/>
+                            <rect key="frame" x="10" y="145.5" width="315" height="34"/>
                             <color key="backgroundColor" systemColor="systemGray6Color"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Пояснение к отгадке (отображается при правильном ответе):" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z14-ff-0eh">
-                            <rect key="frame" x="28.5" y="123" width="278" height="36"/>
-                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                            <nil key="textColor"/>
+                            <rect key="frame" x="10" y="186.5" width="315" height="30.5"/>
+                            <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                            <color key="textColor" systemColor="secondaryLabelColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Yki-o9-QXe">
-                            <rect key="frame" x="10" y="166" width="315" height="33"/>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Yki-o9-QXe" userLabel="Пояснение">
+                            <rect key="frame" x="10" y="224" width="315" height="33"/>
                             <color key="backgroundColor" systemColor="systemGray6Color"/>
                             <color key="textColor" systemColor="labelColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -71,13 +90,21 @@
                     </subviews>
                     <constraints>
                         <constraint firstItem="rN5-np-eol" firstAttribute="leading" secondItem="5ua-R9-X7I" secondAttribute="leading" constant="10" id="60C-3E-8mP"/>
+                        <constraint firstItem="EVh-MW-pWq" firstAttribute="leading" secondItem="5ua-R9-X7I" secondAttribute="leading" constant="10" id="EKG-Lr-ncE"/>
+                        <constraint firstItem="WXQ-eN-qf8" firstAttribute="leading" secondItem="5ua-R9-X7I" secondAttribute="leading" constant="10" id="F1I-bR-Jnk"/>
                         <constraint firstAttribute="trailing" secondItem="rN5-np-eol" secondAttribute="trailing" constant="10" id="GYH-HQ-Gme"/>
+                        <constraint firstAttribute="trailing" secondItem="EVh-MW-pWq" secondAttribute="trailing" constant="10" id="HEZ-KB-y1l"/>
                         <constraint firstAttribute="trailing" secondItem="WlQ-JF-7sn" secondAttribute="trailing" constant="10" id="LC5-cA-tZY"/>
+                        <constraint firstAttribute="trailing" secondItem="Z14-ff-0eh" secondAttribute="trailing" constant="10" id="PzF-vU-Ndp"/>
                         <constraint firstItem="WlQ-JF-7sn" firstAttribute="leading" secondItem="5ua-R9-X7I" secondAttribute="leading" constant="10" id="RZE-KT-Ul0"/>
                         <constraint firstItem="Yki-o9-QXe" firstAttribute="leading" secondItem="5ua-R9-X7I" secondAttribute="leading" constant="10" id="Vbc-tp-Od5"/>
-                        <constraint firstAttribute="trailing" secondItem="wZT-dI-dx6" secondAttribute="trailing" constant="10" id="aUc-3K-NeA"/>
-                        <constraint firstItem="wZT-dI-dx6" firstAttribute="leading" secondItem="5ua-R9-X7I" secondAttribute="leading" constant="10" id="bN6-i6-KwF"/>
+                        <constraint firstAttribute="trailing" secondItem="WXQ-eN-qf8" secondAttribute="trailing" constant="10" id="Yuy-Qd-f8M"/>
+                        <constraint firstItem="Aht-HI-t6S" firstAttribute="leading" secondItem="5ua-R9-X7I" secondAttribute="leading" constant="10" id="cbn-BQ-yuT"/>
+                        <constraint firstItem="Z14-ff-0eh" firstAttribute="leading" secondItem="5ua-R9-X7I" secondAttribute="leading" constant="10" id="l0c-Qw-xGK"/>
+                        <constraint firstItem="l2N-T7-DYb" firstAttribute="leading" secondItem="5ua-R9-X7I" secondAttribute="leading" constant="10" id="pwK-1S-fNf"/>
+                        <constraint firstAttribute="trailing" secondItem="l2N-T7-DYb" secondAttribute="trailing" constant="10" id="wEW-DG-uiD"/>
                         <constraint firstAttribute="trailing" secondItem="Yki-o9-QXe" secondAttribute="trailing" constant="10" id="z9N-vX-tgf"/>
+                        <constraint firstAttribute="trailing" secondItem="Aht-HI-t6S" secondAttribute="trailing" constant="10" id="zq9-y5-PWg"/>
                     </constraints>
                 </stackView>
                 <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="pwa-zc-IE8">
@@ -123,13 +150,13 @@
                 <constraint firstItem="5W1-Fd-mso" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="DIL-3L-ag0"/>
                 <constraint firstItem="xHV-ic-EPd" firstAttribute="centerX" secondItem="pwa-zc-IE8" secondAttribute="centerX" id="E7k-Lc-jxJ"/>
                 <constraint firstItem="wjj-0z-60W" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="JsT-jR-vLp"/>
-                <constraint firstItem="5ua-R9-X7I" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" constant="-100" id="NUp-c6-q3O"/>
                 <constraint firstItem="wjj-0z-60W" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Nkz-4g-cL2"/>
                 <constraint firstItem="pwa-zc-IE8" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Opf-MM-Qng"/>
                 <constraint firstItem="pwa-zc-IE8" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="RqR-Bf-jKz"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="5ua-R9-X7I" secondAttribute="trailing" constant="20" id="Zcf-k2-sVX"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="5W1-Fd-mso" secondAttribute="bottom" constant="20" id="cLd-uk-tZm"/>
                 <constraint firstItem="5ua-R9-X7I" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="jng-OU-dxb"/>
+                <constraint firstItem="5ua-R9-X7I" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" constant="-100" id="mWB-3q-704"/>
                 <constraint firstItem="xHV-ic-EPd" firstAttribute="centerY" secondItem="pwa-zc-IE8" secondAttribute="centerY" id="vh7-t4-csd"/>
                 <constraint firstItem="pwa-zc-IE8" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="wNx-6G-xnO"/>
             </constraints>
@@ -140,6 +167,9 @@
         <image name="plus.viewfinder" catalog="system" width="128" height="115"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
